src/styles/globals.css
/* ... */
.icon-tiny {
  height: var(--size--tiny);
  object-fit: contain;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
}

.icon-xlarge {
  height: var(--size--xlarge);
  object-fit: contain;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
}

.fs-styleguide_flex {
  grid-column-gap: 4rem;
  grid-row-gap: 4rem;
  flex-flow: wrap;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  width: 100%;
  transition: box-shadow .2s;
  display: flex;
}

.icon-huge {
  height: var(--size--huge);
  object-fit: contain;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
}

.text-size-medium-2 {
  letter-spacing: 0;
  font-size: 1.25rem;
  line-height: 1.5em;
}

.text-weight-semibold-2 {
  font-weight: 600 !important;
}

.spacer-large {
  width: 100%;
  padding-top: 3rem;
}

.facade_video-wrapper {
  aspect-ratio: 16 / 9;
  width: 100%;
  height: 100%;
  position: relative;
  overflow: clip;
}

.facade_video-wrapper:where(.w-variant-2d923de7-67e4-c1e8-3411-a06912614354) {
  aspect-ratio: 9 / 16;
}

.facade_video {
  background-color: #000;
  width: 100%;
  height: 100%;
}

.facade_thumbnail {
  width: 100%;
  height: 100%;
}

.facade_thumbnail-custom {
  pointer-events: none;
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: absolute;
  inset: 0%;
}

.facade-play_button-wrapper {
  pointer-events: none;
  justify-content: center;
  align-items: center;
  position: absolute;
  inset: 0%;
}

.facade-play_button {
  aspect-ratio: 1;
  pointer-events: none;
  color: var(--base-color-neutral--white);
  background-color: red;
  border-radius: 100%;
  justify-content: center;
  align-items: center;
  max-width: 25%;
  max-height: 25%;
  margin: auto;
  transition: transform .325s;
  display: flex;
  position: absolute;
  inset: 0%;
}

.facade-play_button-icon {
  aspect-ratio: 1;
  background-color: red;
  justify-content: center;
  align-items: center;
  max-width: 30%;
  max-height: 30%;
  margin-left: 5%;
  display: flex;
  position: relative;
  inset: 0%;
}

.facade_url {
  display: none;
}

.center-heading-content {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  text-align: center;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.center-heading-content.max-width-xmedium {
  max-width: 55rem;
}

.hero-h1 {
  font-size: 6rem;
}

.hero-h1.pointer-off {
  pointer-events: none;
}

.h-wrap {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.h-wrap.space-between {
  justify-content: space-between;
}

.h-wrap.space-between.wrap_landscape.mw-75 {
  max-width: 75rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: 2rem;
  padding-right: 2rem;
}

.h-wrap.gap-0-5 {
  grid-column-gap: .5rem;
  grid-row-gap: .5rem;
}

.h-wrap._w-100 {
  width: 100%;
}

.h-wrap.is-details {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  font-size: var(--size--small);
  justify-content: flex-start;
  align-items: center;
  width: 100%;
}

.h-wrap.gap-2 {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
}

.h-wrap.gap-0 {
  grid-column-gap: 0rem;
  grid-row-gap: 0rem;
}

.h-wrap.gap-0.is-subscribe {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
}

.h-wrap.bg-transparent {
  background-color: #ededed00;
}

.h-wrap.is-link {
  grid-column-gap: .75rem;
  grid-row-gap: .75rem;
  cursor: pointer;
}

.posting_filter-form-block {
  margin-bottom: 0;
}

.posting_filter-form {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  background-color: #ededed00;
  display: flex;
}

.filter_select {
  color: var(--base-color-neutral--black);
  background-color: #f3f3f300;
  border: 0 solid #000;
  width: 4.75rem;
  margin-bottom: 0;
}

.posting_list {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  flex-flow: column;
  max-width: 75rem;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.posting_item {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  border: 1px solid var(--base-color-neutral--white);
  flex-flow: row;
  grid-template-rows: auto;
  grid-template-columns: auto .75fr 1fr auto;
  grid-auto-columns: 1fr;
  justify-content: flex-start;
  align-items: center;
  padding: 1.5rem 2rem;
  transition: border-color .225s;
  display: flex;
  position: relative;
}

.posting_item:hover {
  border: 1px solid var(--color-surface--orange);
}

.company_logo {
  aspect-ratio: 1;
  border-radius: 100%;
  width: 5rem;
  min-width: 5rem;
  height: 5rem;
  max-height: 5rem;
  object-fit: cover;
  background-color: var(--base-color-neutral--grey-1);
  flex-shrink: 0;
}

.heading-content {
  grid-column-gap: .75rem;
  grid-row-gap: .75rem;
  flex-flow: column;
  display: flex;
}

.heading-content.gap-0-25 {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
}

.heading-content.gap-0-25.align-middle {
  justify-content: center;
  align-items: flex-start;
}

.heading-content.gap-0-25.align-middle.is-title {
  width: 100%;
}

.heading-content.align-bottom {
  justify-content: flex-end;
  align-items: flex-start;
}

.heading-content.gap-1 {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
}

.icon-embed-xsmall-2 {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 1.5rem;
  height: 1.5rem;
  display: flex;
}

.posting_details {
  grid-column-gap: .25rem;
  grid-row-gap: .25rem;
  flex-flow: column;
  justify-content: flex-end;
  align-items: flex-start;
  width: 100%;
  display: flex;
}

.new-badge {
  background-color: var(--color-surface--orange);
  color: var(--base-color-neutral--white);
  font-size: var(--size--xsmall);
  border-radius: 20px;
  padding: .35rem .75rem;
  line-height: 1;
  display: flex;
}

.bullet_dot {
  aspect-ratio: 1;
  background-color: var(--base-color-neutral--black);
  border-radius: 100%;
  width: .35rem;
  min-width: .35rem;
  height: .35rem;
  min-height: .35rem;
}
/* ... */

